--- a/Lab4Updated.qmd
+++ b/Lab4Updated.qmd
@@ -503,7 +503,7 @@ table(attitude_clusters)
 
 1.  Review and combine individual results. Which methods for clustering the data points seemed to correspond best with the pre-established groups? What $K$ gave you the best results? What linkage? What distance metric?
 
-    We had two "best" results. One resulted from k means and the other from heiracrchal clustering. They both had similar errors (although for different groups). The means method used a k of 4. The other method that seemed to correspond best with the pre-established groups was the hierarchical clustering with a cut at K=4. The linkage was complete and the distance was euclidean. We came to this conclusion after comparing the group containment for each model printed in the individual assignments. This method successfully separated Indo students from CU students fairly well when compared to the other models. This was also verified for the attitude data, though selecting the best model here was more difficult as no model performed significantly better than the other according to our data.
+    After reviewing all individual clustering results, we found that both K-means with K = 4 and hierarchical clustering using complete linkage with Euclidean distance performed best in terms of aligning with the original respondent groups. These methods most clearly separated the Indonesian respondents from the U.S.-based students, which was one of the key goals of the analysis. K-means was slightly easier to interpret and implement consistently across individuals, which led us to select it for our team’s final clustering. However, the hierarchical method also showed similar group structure when we used a cut at K = 4. Based on comparison tables and dendrograms, both models grouped IndoProf24 and IndoPost24 more distinctly than the other methods, giving us more confidence in their results. 
 
     The print out below has the k means model and hierarchical clustering model that both performed similarly, though we ultimately used the k means model for question 3.
 
